[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "telemetry-counter"
url = "https://github.com/thatlarrypearson/telemetry-counter"
version = "0.0.1"
description = "Telemetry System Boot and Application Startup Counter"
long_description = "file:README.md"
authors = [
    "Larry Pearson <no-reply@gmail.com>",
]
license = "MIT"
readme = "README.md"
python = "3.11"
homepage = "https://github.com/thatlarrypearson/telemetry-counter"
repository = "https://github.com/thatlarrypearson/telemetry-counter"
documentation = "https://github.com/thatlarrypearson/telemetry-counter"
keywords = ["telematics", "vehicle"]
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


