[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "telemetry-wthr"
url = "https://github.com/thatlarrypearson/telemetry-wthr"
version = "0.0.0"
description = "Telemetry Weather Data Logger"
long_description = "file:README.md"
authors = [
    "Larry Pearson <no-reply@gmail.com>",
]
license = "MIT"
readme = "README.md"
python = "3.10"
homepage = "https://github.com/thatlarrypearson/telemetry-weather"
repository = "https://github.com/thatlarrypearson/telemetry-weather"
documentation = "https://github.com/thatlarrypearson/telemetry-weather"
keywords = ["weather", "telematics", "vehicle"]
dependencies = [
    'telemetry-counter == 0.0.1',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


