[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "telemetry-trailer-connector"
url = "https://github.com/thatlarrypearson/telemetry-trailer-connector"
version = "0.0.0"
description = "Telemetry Trailer Connector Data Logger"
long_description = "file:README.md"
authors = [
    "Larry Pearson <no-reply@gmail.com>",
]
license = "MIT"
readme = "README.md"
python = "3.11"
homepage = "https://github.com/thatlarrypearson/telemetry-weather"
repository = "https://github.com/thatlarrypearson/telemetry-weather"
documentation = "https://github.com/thatlarrypearson/telemetry-weather"
keywords = ["telematics", "vehicle", "trailer"]
dependencies = [
    'telemetry-counter == 0.0.1',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


