[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "telemetry-obd-log-to-csv"
url = "https://github.com/thatlarrypearson/telemetry-obd-log-to-csv"
version = "0.3.3"
description = "Telemetry OBD Data To CSV File"
long_description = "file:README.md"
authors = [
    "Larry Pearson <no-reply@gmail.com>",
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/thatlarrypearson/telemetry-obd-log-to-csv"
repository = "https://github.com/thatlarrypearson/telemetry-obd-log-to-csv"
documentation = "https://github.com/thatlarrypearson/telemetry-obd-log-to-csv"
keywords = ["obd", "telematics", "vehicle"]
dependencies = [
  'pint == 0.20.1',
  'rich == 13.6.0',
  'python-dateutil == 2.8.2',
  'obd == 0.7.2',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


